cambios en inicio

--- a/src/app/Components/blockchain/blockchain.component.html
+++ b/src/app/Components/blockchain/blockchain.component.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="col-md-5">
-                <img src="../../../assets/img/blockchain.jpg" class="img1 img-fluid" alt="marketing exponencial">
+                <img src="../../../assets/img/blockchain_1.jpg" class="img1 img-fluid" alt="marketing exponencial">
             </div>
         </div>
 
