--- a/src/app/Components/coaching/coaching.component.html
+++ b/src/app/Components/coaching/coaching.component.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="col-md-5">
-                <img src="../../../assets/img/markexp.png" class="img1 img-fluid" alt="marketing exponencial">
+                <img src="../../../assets/img/coaching.jpg" class="img1 img-fluid" alt="marketing exponencial">
             </div>
         </div>
 
