--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -2,7 +2,7 @@
 
 <div class="container-experiencia">
   <div class="container">
-    <h2 class="text-center">Nuestra experiencia</h2>
+    <h2 class="text-center">{{"titles.experiencia" | translate}}</h2>
 
     <div class="row justify-content-center">
       <div class="col-md-4">
@@ -84,7 +84,7 @@
 
   <div class="container clientes">
     <!-- h1 Nuestros Clientes -->
-    <h2 class="text-center">Confian en Nosotros</h2>
+    <h2 class="text-center">{{"titles.clientes" | translate}}</h2>
     <!-- Inicio section div flex -->
     <section class="d-flex flex-wrap justify-content-center" >
       <!-- Inicio 1 logo de flexbox -->
@@ -127,7 +127,7 @@
 
   <div class="container aliados">
     <!-- h1 organizaciones amigas -->
-    <h2 class="text-center">Aliados </h2>
+    <h2 class="text-center">{{"titles.aliados" | translate}}</h2>
     <!-- Inicio de div flex de aliados -->
       <section class="d-flex flex-wrap justify-content-center">
         <!-- Inicio de logo 1 de aliados-->
