--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -3,8 +3,8 @@
     <div class="m-0 row justify-content-center align-item-center">
       <div class="col-auto text-center">
         <!--<img class="" src=""/>-->
-        <img class="home-logo" src="../../../assets/img/Home/isotipo.svg" alt=""><br>
-        <span class="home-logo-text">Hanansoft</span>
+        <img class="img-fluid home-logo" src="../../../assets/img/Home/logo-h.svg" alt="">
+        <!--<span class="home-logo-text">Hanansoft</span>-->
       </div>
     </div>
     <div class="m-0 row justify-content-center align-item-center">
