--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -15,8 +15,65 @@
         </div>
       </div>
 
+      <div id="services-principal" >
+        <h2 class="text-center">{{"beginning.title-1" | translate}}</h2>
+
+
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <div class="card card-servicios">
+              <div class="img-container-mundo">
+                  <img class="box-mundo" src="../../../assets/img/mark.jpg" alt="">
+              </div>                
+              <div class="card-body">
+                  <a href="/services">
+                    <h5 class="card-title text-center services-title">{{"beginning.title-13" | translate}}</h5>
+                  </a>
+                  <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+              </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card card-servicios">
+              <div class="img-container-mundo">
+                  <img class="box-mundo" src="../../../assets/img/app.png" alt="">
+              </div>                
+              <div class="card-body">
+                  <a href="/apps">
+                    <h5 class="card-title text-center services-title">{{"beginning.title-4" | translate}}</h5>
+                  </a>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                                
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <div class="card card-servicios">
+              <div class="img-container-mundo">
+                  <img class="box-mundo" src="../../../assets/img/ecommerce.jpg" alt="">
+              </div>                
+              <div class="card-body">
+                  <a href="/commerce">
+                    <h5 class="card-title text-center services-title">{{"beginning.title-2" | translate}}</h5>
+                  </a>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                                
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
         <div id="servicios" class="text-center">
-            <h2>Nuestros servicios</h2>
+            <h2>{{"titles.services" | translate}}</h2>
         </div>
     
         <div class="row justify-content-center">
@@ -64,31 +121,7 @@
                     </div>
                   </div>
             </div>
-        
-            <div class="col-md-4">
-                <div class="card card-servicios">
-                    <div class="img-container-mundo">
-                        <img class="box-mundo" src="../../assets/img/principal/2.png" alt="">
-                    </div>                
-                    <div class="card-body">
-                        <h5 class="card-title">{{"beginning.title-1" | translate}}</h5>
-                      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <ul>
-                          <li>
-                            <a href="/services" class="">{{"beginning.title-13" | translate}}</a>              
-                          </li>
-                          <li>
-                            <a href="/apps"class="">{{"beginning.title-4" | translate}}</a>
-                          </li>
-                          <li>
-                            <a href="/commerce" class="">{{"beginning.title-2" | translate}}</a>
-                          </li>
-                      </ul>
-                                      
-                    </div>
-                  </div>
-            </div>
-            
+                   
             <div class="col-md-4">
                 <div class="card card-servicios">
                     <div class="img-container-mundo">
