--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<div class="container-fondo">
+<div class="container-nosotros">
   <div class="container">
     <h2 class="text-center">{{"we.title"|translate}}</h2>
     <div class="row justify-content-center">
