--- a/src/app/Components/comerce/comerce.component.html
+++ b/src/app/Components/comerce/comerce.component.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="col-md-5">
-                <img src="../../../assets/img/ecom.png" class="img1 img-fluid" alt="commerce exponencial">
+                <img src="../../../assets/img/ecommerce.jpg" class="img1 img-fluid" alt="commerce exponencial">
             </div>
         </div>
 
