--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -1,5 +1,5 @@
 .container-nosotros {
-  background-image: url("../../../assets/img/background-3883181_1920.jpg");
+  background-image: url("../../../assets/img/Home/home.png");
   background-size: cover;
   position: relative;
   background-attachment: fixed;
