--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -108,7 +108,7 @@
      <!-- Inicio de 4 logo de flexbox -->
       <div class="logo">
           <a href="https://www.facebook.com/CCMSFLP/" target="_blank">
-            <img src="../../../assets/img/sanfrancisco.png.png" class="efecto"  alt="San Francisco" id="imagen4">
+            <img src="../../../assets/img/msanfrancisco.png" class="efecto"  alt="San Francisco" id="imagen4">
           </a>
       </div>
       <!-- Inicio de 5 logo de flexbox -->
