--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
 
-      <div id="services-principal" >
+      <div id="servicios" >
         <h2 class="text-center">{{"beginning.title-1" | translate}}</h2>
 
 
@@ -34,6 +34,11 @@
             </div>
         </div>
 
+
+      </div>
+
+      <div class="row justify-content-center">
+
         <div class="col-md-4">
           <div class="card card-servicios">
               <div class="img-container-mundo">
@@ -48,9 +53,8 @@
               </div>
             </div>
         </div>
-      </div>
 
-      <div class="row justify-content-center">
+
         <div class="col-md-4">
           <div class="card card-servicios">
               <div class="img-container-mundo">
@@ -72,15 +76,15 @@
 
 
 
-        <div id="servicios" class="text-center">
-            <h2>{{"titles.services" | translate}}</h2>
+        <div id="servicios-secondary" class="text-center">
+          <!--<h2>{{"titles.services" | translate}}</h2>-->
         </div>
     
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="card card-servicios">
                     <div class="img-container-mundo">
-                        <img class="box-mundo" src="../../assets/img/principal/3.png" alt="">
+                        <img class="box-mundo" src="../../../assets/img/estrategia.jpg" alt="">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">{{"beginning.title-7" | translate}}</h5>
@@ -115,6 +119,9 @@
                           <li>
                             <a class="" href="/blockchain">{{"beginning.title-14" | translate}}</a>  
                           </li>
+                          <li>
+                            <a class="" href="/arte">{{"beginning.title-6" | translate}}</a>                
+                          </li>
                       </ul>
                       
                       
@@ -133,9 +140,6 @@
                       <ul>
                           <li>
                             <a class="" href="/turismo">{{"beginning.coaching-1" | translate}}</a>
-                          </li>
-                          <li>
-                            <a class="" href="/arte">{{"beginning.title-6" | translate}}</a>                
                           </li>
                       </ul>
                     </div>
