--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -108,7 +108,7 @@
      <!-- Inicio de 4 logo de flexbox -->
       <div class="logo">
           <a href="https://www.facebook.com/CCMSFLP/" target="_blank">
-            <img src="../../../assets/img/msanfrancisco.png" class="efecto"  alt="San Francisco" id="imagen4">
+            <img src="../../../assets/img/sanfrancisco.jpg" class="efecto"  alt="San Francisco" id="imagen4">
           </a>
       </div>
       <!-- Inicio de 5 logo de flexbox -->
@@ -149,7 +149,9 @@
         <!-- Inicio de logo 3 de aliados -->
         <div class="marco-ext2 logo d-flex">
           <div class="align-self-center">
-            <img src="../../../assets/img/illa.png" class="efecto" alt="Illa" id="imagenesaliados4">
+            <a href="http://www.illaa.org/">
+              <img src="../../../assets/img/illa.png" class="efecto" alt="Illa" id="imagenesaliados4">
+            </a>
           </div>
         </div>
       </section>
