--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -25,7 +25,7 @@
           <p><a href="/coaching">{{ "digital-projects.title" | translate }}</a></p>
           <p><a href="/developers">Head Hunting Developers</a></p>
           <p><a href="/dapps">{{ "dapps.title" | translate }}</a></p>
-          <p><a href="/blockchain">{{ "blockchain.title" | translate}}</a></p>
+           <!-- <p><a href="/blockchain">{{ "blockchain.title" | translate}}</a></p>-->
           <p><a href="/services">{{ "webservices.title" | translate }}</a></p>
           <p><a href="/apps">{{ "apps.title" | translate }}</a></p>
           <p><a href="/commerce">{{ "commerce.title" | translate }}</a></p>
